--- a/.github/workflows/testFiles.yml
+++ b/.github/workflows/testFiles.yml
@@ -28,18 +28,14 @@ jobs:
               ARCHITECTURES=$(docker run --rm mplatform/mquery:v0.5.0@sha256:d0989420b6f0d2b929fd9355f15c767f62d0e9a72cdf999d1eb16e6073782c71 $IMAGE | grep -E 'linux/amd64|linux/arm64')
               if [[ ! $ARCHITECTURES =~ "linux/amd64" ]] || [[ ! $ARCHITECTURES =~ "linux/arm" ]]; then
                 echo "::error::Image $IMAGE does not support both linux/amd64 and linux/arm architectures"
-                exit 1
               fi
             done
             if grep -q ':latest' $changed_file ; then
               echo "::error::Some images use the latest tag"
-              exit 1
             fi
             if grep -q 'PROXY_AUTH_ADD: "true"' $changed_file ; then
               echo "::error::PROXY_AUTH_ADD is set to true"
-              exit 1
             fi
-            echo "$changed_file -> All docker-compose checks passed"
           fi
         done
       shell: bash
@@ -54,13 +50,11 @@ jobs:
             for FIELD in "${REQUIRED_FIELDS[@]}"; do
               if ! grep -q "^$FIELD:" $changed_file ; then
                 echo "::error::Required field $FIELD is missing"
-                exit 1
               fi
             done
             CATEGORY=$(grep 'category:' $changed_file | cut -d':' -f2 | tr -d '[:space:]')
             if [[ $CATEGORY != $(echo "$CATEGORY" | tr '[:upper:]' '[:lower:]') ]]; then
               echo "::error::Category value is not lowercase"
-              exit 1
             fi
             OPTIONAL_FIELDS=("submission" "submitter" "defaultPassword" "defaultUsername" "repo")
             for FIELD in "${OPTIONAL_FIELDS[@]}"; do
@@ -72,4 +66,17 @@ jobs:
           fi
         done
       shell: bash
+
+    - name: Auto Comment
+      uses: wow-actions/auto-comment@v1
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        pullRequestOpened: |
+          👋 @{{ author }}
+          Thank you for raising your pull request.
+          Please make sure you have followed our contributing guidelines. We will review it as soon as possible
+          If there are any errors, they will be listed below:
+          ${{ steps.build.outputs.errors }}
+          ${{ steps.build.outputs.warnings }}
+
 
