--- a/.github/workflows/testFiles.yml
+++ b/.github/workflows/testFiles.yml
@@ -79,4 +79,12 @@ jobs:
           ${{ steps.build.outputs.errors }}
           ${{ steps.build.outputs.warnings }}
 
+        pullRequestReopened: |
+          👋 @{{ author }}
+          Thank you for raising your pull request.
+          Please make sure you have followed our contributing guidelines. We will review it as soon as possible
+          If there are any errors, they will be listed below:
+          ${{ steps.build.outputs.errors }}
+          ${{ steps.build.outputs.warnings }}
+
 
