--- a/.github/workflows/testFiles.yml
+++ b/.github/workflows/testFiles.yml
@@ -29,16 +29,23 @@ jobs:
               ARCHITECTURES=$(docker run --rm mplatform/mquery:v0.5.0@sha256:d0989420b6f0d2b929fd9355f15c767f62d0e9a72cdf999d1eb16e6073782c71 $IMAGE | grep -E 'linux/amd64|linux/arm64')
               if [[ ! $ARCHITECTURES =~ "linux/amd64" ]] || [[ ! $ARCHITECTURES =~ "linux/arm" ]]; then
                 echo "::error::Image $IMAGE does not support both linux/amd64 and linux/arm architectures"
+                echo "imageError=$(echo Image $IMAGE does not support both linux/amd64 and linux/arm architectures)" >> $GITHUB_OUTPUT
               fi
             done
             if grep -q ':latest' $changed_file ; then
               echo "::error::Some images use the latest tag"
+              echo "latestTagError=$(echo Some images use the latest tag)" >> $GITHUB_OUTPUT
             fi
             if grep -q 'PROXY_AUTH_ADD: "true"' $changed_file ; then
               echo "::error::PROXY_AUTH_ADD is set to true"
+              echo "proxyAuthError=$(echo PROXY_AUTH_ADD is set to true)" >> $GITHUB_OUTPUT
             fi
           fi
         done
+      outputs:
+        imageError: ${{ steps.docker-compose-checks.outputs.imageError }}
+        latestTagError: ${{ steps.docker-compose-checks.outputs.latestTagError }}
+        proxyAuthError: ${{ steps.docker-compose-checks.outputs.proxyAuthError }}
       shell: bash
 
     - name: Run umbrel app checks
@@ -96,7 +103,9 @@ jobs:
           If there are any errors, they will be listed below:
           Errors:
           `docker-compose.yml`
-          ${{ steps.docker_compose_checks.outputs }}
+          ${{ steps.docker_compose_checks.imageError }}
+          ${{ steps.docker_compose_checks.latestTagError }}
+          ${{ steps.docker_compose_checks.proxyAuthError }}
           `umbrel-app.yml`
           ${{ steps.umbrel_app_checks.outputs }}
   
