update immich to v1.82.0

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.81.0"
+version: "v1.82.0"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
@@ -48,27 +48,22 @@ releaseNotes: >-
   ⚠️ Please update Immich to this version as soon as possible. This release fixes a severe security vulnerability caused by a third-party dependency.
   Additionally, please note the following actions that may be required after the update:
 
-  - The reverse geocoding settings have been moved to the admin settings pages. If you have set the level of accuracy in the ".env" file, you will need to make the corresponding changes in the settings menu on the administration page on the web.
-  
-  - Please migrate thumbnails to a new folder structure by running the new migration job in "Admin > Settings > Migration"
-    
+  - Trash Feature
 
-  This update includes many bug fixes and performance improvements, including the following highlights:
-  
-  - Added mechanism to store generated files for thumbnails and encoded-videos in subfolders
+  - Web Client WebSocket Feature
 
-  - Added an ability to suggest people’s names during name assignment for faces
-  
-  - Added an option to show the sidebar menu for the people page in the user setting on the web
+  - Library Scanning Performance
 
-  - Added week number as an option for path templating
+  - Time Bucket Grouping Accuracy
 
-  - Fixes issues related to External Libraries, metadata processing, and Live Photos
+  - Storage Template Improvements
+
+  - Notable fix: no longer read iOS-modified photos as “FullSizeRender” 
 
   - and more!
 
 
-  Full release notes are found at: https://github.com/immich-app/immich/releases
+  Full release notes are found at: https://github.com/immich-app/immich/releases/tag/v1.82.0
 developer: Alex Tran
 website: https://www.immich.app
 dependencies: []
