--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -46,7 +46,9 @@ description: >-
   - User-defined storage structure
 releaseNotes: >-
   ⚠️ Please update Immich to this version as soon as possible. This release fixes a severe security vulnerability caused by a third-party dependency.
-  Additionally, please note the following actions that may be required after the update:
+
+  
+  It includes many bug fixes and performance improvements, as well as the following new features:
 
   - Trash Feature
 
