--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -48,7 +48,7 @@ releaseNotes: >-
   ⚠️ Please update Immich to this version as soon as possible. This release fixes a severe security vulnerability caused by a third-party dependency.
 
   
-  It includes many bug fixes and performance improvements, as well as the following new features:
+  This update from v1.81.0 to v1.82.0 includes many bug fixes and performance improvements, as well as the following new features:
 
   - Trash Feature
 
