tweak release notes

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -45,10 +45,10 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >-
-  ⚠️ Please update Immich to this version as soon as possible. This release fixes a severe security vulnerability caused by a third-party dependency.
+  ⚠️ Please update Immich to this version as soon as possible. This release fixes two security flaws noted here: https://github.com/immich-app/immich/releases/tag/v1.82.0
 
   
-  This update from v1.81.0 to v1.82.0 includes many bug fixes and performance improvements, as well as the following new features:
+  This update from v1.81.0 to v1.82.1 includes many bug fixes and performance improvements, as well as the following new features:
 
   - Trash Feature
 
@@ -56,7 +56,7 @@ releaseNotes: >-
 
   - Library Scanning Performance
 
-  - Time Bucket Grouping Accuracy
+  - Time Bucket Grouping Accuracy (to take advantage of this feature, please run the job to “Extract Metadata” for all assets.)
 
   - Storage Template Improvements
 
