add EXIF warning to release notes

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -48,6 +48,9 @@ releaseNotes: >-
   ⚠️ Please update Immich to this version as soon as possible. This release fixes two security flaws noted here: https://github.com/immich-app/immich/releases/tag/v1.82.0
 
   
+  Additionally, it was discovered that thumbnails (which can be downloaded from right-click -> save images as…) contain the full EXIF (metadata) information.  Users are advised not to use the public-sharing feature until a fix is released if they have concerns about sharing metadata.
+
+  
   This update from v1.81.0 to v1.82.1 includes many bug fixes and performance improvements, as well as the following new features:
 
   - Trash Feature
