add dind digest missing from app launch

--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 9000
 
   docker:
-    image: docker:24.0.5-dind
+    image: docker:24.0.5-dind@sha256:3c6e4dca7a63c9a32a4e00da40461ce067f255987ccc9721cf18ffa087bcd1ef
     privileged: true
     network_mode: host
     stop_grace_period: 1m
