--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: core-lightning
 category: bitcoin
 name: Core Lightning
-version: "23.08"
+version: "23.08-hotfix-1"
 tagline: Run your personal Core Lightning node
 description: >-
   Get started with the Lightning network today with Core Lightning - a
@@ -102,6 +102,8 @@ releaseNotes: >-
   - reckless added support for node.js plugin installation and for networks beyond bitcoin and regtest.
 
   - spending unilateral close transactions now use dynamic fees based on deadlines (and RBF), instead of fixed fees.
+
+  Note: The 23.08-hotfix-1 update fixes a bug that was resulting in the app not working for networks other than mainnet
 
 
   Full lightningd release notes are available at https://github.com/ElementsProject/lightning/releases
