tweak release notes

--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -32,7 +32,10 @@ defaultPassword: ""
 submitter: Blockstream
 submission: https://github.com/getumbrel/umbrel-apps/pull/475
 releaseNotes: >-
-  This release updates the user interface, as well as the underlying c-lightning-REST and lightningd components of the Core Lightning app.
+  This is a hotfix update that fixes a bug preventing the Core Lightning app from running in test networks (e.g., testnet). No other changes are included in this release.
+
+
+  The release notes from 23.08 are included here for completeness.
 
 
   cln-application v0.0.4 (user interface):
@@ -102,9 +105,6 @@ releaseNotes: >-
   - reckless added support for node.js plugin installation and for networks beyond bitcoin and regtest.
 
   - spending unilateral close transactions now use dynamic fees based on deadlines (and RBF), instead of fixed fees.
-
-
-  Note: The 23.08-hotfix-1 update fixes a bug that was resulting in the app not working for networks other than mainnet
 
 
   Full lightningd release notes are available at https://github.com/ElementsProject/lightning/releases
