tweak release notes again

--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -32,7 +32,7 @@ defaultPassword: ""
 submitter: Blockstream
 submission: https://github.com/getumbrel/umbrel-apps/pull/475
 releaseNotes: >-
-  This is a hotfix update that fixes a bug preventing the Core Lightning app from running in test networks (e.g., testnet). No other changes are included in this release.
+  This hotfix update resolves an issue that was preventing the Core Lightning app from operating on test networks such as testnet. No additional changes are included in this release.
 
 
   The release notes from 23.08 are included here for completeness.
