--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: core-lightning
 category: bitcoin
 name: Core Lightning
-version: "23.08"
+version: "23.08-hotfix-1"
 tagline: Run your personal Core Lightning node
 description: >-
   Get started with the Lightning network today with Core Lightning - a
@@ -32,7 +32,10 @@ defaultPassword: ""
 submitter: Blockstream
 submission: https://github.com/getumbrel/umbrel-apps/pull/475
 releaseNotes: >-
-  This release updates the user interface, as well as the underlying c-lightning-REST and lightningd components of the Core Lightning app.
+  This hotfix update resolves an issue that was preventing the Core Lightning app from operating on test networks such as testnet. No additional changes are included in this release.
+
+
+  The release notes from 23.08 are included here for completeness.
 
 
   cln-application v0.0.4 (user interface):
