--- a/circuitbreaker/docker-compose.yml
+++ b/circuitbreaker/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 9235
       
   web:
-    image: ghcr.io/lightningequipment/circuitbreaker:v0.5.0@0e5ba7c4f7be9921123d8ae4f1f120a2ebc2502d185a75ff93537b071fe6366b
+    image: ghcr.io/lightningequipment/circuitbreaker:v0.5.0@sha256:0e5ba7c4f7be9921123d8ae4f1f120a2ebc2502d185a75ff93537b071fe6366b
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
