feat: update home to v0.10.1

--- a/homebox/umbrel-app.yml
+++ b/homebox/umbrel-app.yml
@@ -3,7 +3,7 @@ id: homebox
 name: HomeBox
 tagline: An inventory and organization system built for the home user
 category: files
-version: "0.9.2"
+version: "v0.10.1"
 port: 7745
 description: >-
   Homebox is an inventory and organization system built for the home user! With a focus on simplicity and ease of use, Homebox is the perfect solution for your home inventory, organization, and management needs. 
