--- a/homebox/docker-compose.yml
+++ b/homebox/docker-compose.yml
@@ -8,8 +8,7 @@ services:
       APP_PORT: 7745
     
   web:
-    # TODO: update with version-tagged image when available (https://github.com/hay-kot/homebox/pull/372)
-    image: ghcr.io/hay-kot/homebox:nightly-rootless@sha256:1ec765caa21ad37a1fe64eaed2b10b1652169389a275c914eab71e6fd10232b9
+    image: ghcr.io/hay-kot/homebox:v0.10.1@sha256:542f3d6156c7431b2127b35b37f97a121754dd92abb910afe1bbf0008706d2a1
     restart: on-failure
     user: 1000:1000
     environment:
