--- a/bitcoin/umbrel-app.yml
+++ b/bitcoin/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: bitcoin
 category: bitcoin
 name: Bitcoin Node
-version: "25.0"
+version: "25.1"
 tagline: Run your personal node powered by Bitcoin Core
 description: >-
   Run your Bitcoin node and independently store and validate
@@ -14,6 +14,13 @@ description: >-
 
   Plus, transacting with your own node also helps keep the entire
   Bitcoin network decentralized; win-win!
+
+
+  With over 20 advanced settings, you can take control of your node
+  and customize it to your needs. Control how your node connects to
+  other nodes over Tor, clearnet, and I2P, adjust your daily upload
+  limit, set the maximum mempool size, fine-tune its performance,
+  and much more.
 
 
   Don't trust. Verify. On steroids.
@@ -35,24 +42,25 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >-
-  What's new in Bitcoin Core version 25.0?
+  This update brings Bitcoin Core 25.1, automatic 'settings.json' corruption detection and repair, along with several new advanced settings such as:
 
 
-  - P2P and network changes
-
-  - New and updated RPCs as well as low-level changes
-
-  - New and updated settings
-  
-  - Compatibility updates
-  
-  - Wallet updates
-
-  - REST changes
-
-  - Reduced peers.dat corruption risks
+  - Peer Settings: Customize your node's connections and interactions with network peers. For example, you can now adjust ban durations for misbehaving peers.
 
 
-  Read the full release notes for additional information and detailed changes at https://github.com/bitcoin/bitcoin/blob/master/doc/release-notes/release-notes-25.0.md
+  - Optimization: Fine-tune your node's performance and resource usage with new settings like maximum mempool size.
+
+
+  - RPC and REST: Configure access to your node's RPC and REST APIs.
+
+
+  - and more!
+
+
+  ⚠️ 'Peer Bloom Filters' is now disabled by default for all users, to enhance privacy and lower the risk of denial-of-serice (DoS attacks). You can read more at https://github.com/getumbrel/umbrel/issues/1624.
+  If you are connecting older wallet clients that depend on the BIP37 protocol (eg. Bisq), you can enable 'Peer Bloom Filters' in Advanced Settings at the cost of reduced security.
+
+
+  Discover what's new in Bitcoin Core 25.1: https://github.com/bitcoin/bitcoin/blob/master/doc/release-notes/release-notes-25.1.md
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/commit/576ecd2bef8d625abceed0f67ec9c487da9b2b1b
