add release notes

--- a/homebox/umbrel-app.yml
+++ b/homebox/umbrel-app.yml
@@ -24,5 +24,9 @@ path: ""
 torOnly: false
 defaultUsername: ""
 defaultPassword: ""
+releaseNotes: >-
+  This This release is a minor release updating dependencies and moving to a Low-Privileged/Distroless Docker Image
+
+  Read the full release notes for additional information and detailed changes at https://github.com/hay-kot/homebox/releases/tag/v0.10.1
 submitter: Xosten
 submission: https://github.com/getumbrel/umbrel-apps/pull/501
