tweak taproot assets warning

--- a/lightning-terminal/umbrel-app.yml
+++ b/lightning-terminal/umbrel-app.yml
@@ -8,7 +8,16 @@ description: >-
   Lightning Terminal is the easiest way to manage inbound and
   outbound liquidity on the Lightning Network. Keep your channels open and the
   funds flowing. It provides a visual interface for interacting with your
-  channels and balances using Loop. 
+  channels and balances using Loop.
+
+
+  🚨 CRITICAL REMINDER FOR TAPROOT ASSETS USERS:
+  Uninstalling this app permanently erases application data, which includes Taproot Assets and Bitcoin funds.
+  Before uninstalling or re-installing this app, you must backup the application's .tapd data folder in order to restore your taproot assets.
+  Failure to do so will result in permanent loss of funds. We recommend that you make regular backups.
+  Follow this guide to backup your tapd data:
+  https://community.umbrel.com/t/backing-up-taproot-assets-tapd-data-in-lightning-terminal/14360
+
 
   Why use Pool?
 
@@ -30,17 +39,6 @@ description: >-
   - Configurable wait times and "batching" allow for further fee savings
 
   - Refill and offload funds from any number of Lightning channels in a single on-chain transaction
-
-
-  IMPORTANT NOTE FOR UMBREL/LIGHTNING TERMINAL USERS:
-  DO NOT UNDER ANY CIRCUMSTANCE uninstall (or re-install) the "Lightning
-  Terminal" app without first making a manual backup of all local tapd data,
-  if you are using Taproot Assets as part of the "Lightning Terminal" app with
-  Umbrel. Uninstalling Umbrel apps deletes application data. This Taproot
-  Assets application data encumbers Taproot Assets AND bitcoin funds. Receiving
-  and sending tapd assets updates the daemon's funds-custody material. Merely
-  having the lnd seed phrase is NOT enough to restore assets minted or received.
-  WITHOUT BACKUP BEFORE DELETION, FUNDS ARE DESTROYED.
 developer: Lightning Labs
 website: https://lightning.engineering
 dependencies:
