copy new warning to release notes

--- a/lightning-terminal/umbrel-app.yml
+++ b/lightning-terminal/umbrel-app.yml
@@ -68,15 +68,13 @@ releaseNotes: >-
   before using tapd on mainnet!
 
 
-  IMPORTANT NOTE FOR UMBREL/LIGHTNING TERMINAL USERS:
-  DO NOT UNDER ANY CIRCUMSTANCE uninstall (or re-install) the "Lightning
-  Terminal" app without first making a manual backup of all local tapd data,
-  if you are using Taproot Assets as part of the "Lightning Terminal" app with
-  Umbrel. Uninstalling Umbrel apps deletes application data. This Taproot
-  Assets application data encumbers Taproot Assets AND bitcoin funds. Receiving
-  and sending tapd assets updates the daemon's funds-custody material. Merely
-  having the lnd seed phrase is NOT enough to restore assets minted or received.
-  WITHOUT BACKUP BEFORE DELETION, FUNDS ARE DESTROYED.
+  🚨 CRITICAL REMINDER FOR TAPROOT ASSETS USERS:
+
+  Uninstalling this app permanently erases application data, which includes Taproot Assets and Bitcoin funds.
+  Before uninstalling or re-installing this app, you must backup the application's .tapd data folder in order to restore your taproot assets upon reinstallation.
+  Failure to do so will result in permanent loss of funds. We recommend that you make regular backups.
+  Follow this guide to backup your tapd data:
+  https://community.umbrel.com/t/backing-up-taproot-assets-tapd-data-in-lightning-terminal/14360
 
 
   The Taproot Assets daemon is still in alpha state, which means there can
