--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -27,16 +27,18 @@ releaseNotes: >-
 
   - LND 0.17.1-beta includes a number of bug fixes and optimizations, including: a reduction in CPU utilization due to the new mempool scanning safety logic, enchantments to the CPFP logic for anchor outputs, a fix to a peer/server deadlock, and a bug fix for the new taproot channel type that may have otherwise caused a channel to show as inactive until reconnection.
   
+
   - LND 0.17.2-beta includes a fix for a bug that could cause a panic when a channel is closed while a commitment update is being processed.
 
 
-  Full release notes are found at https://github.com/lightningnetwork/lnd/blob/master/docs/release-notes/
+  - Full release notes are found at https://github.com/lightningnetwork/lnd/blob/master/docs/release-notes/
 
 
   In case you missed it, our previous release of the Lightning Node app (v0.17.0-beta) brought the option to run your node in hybrid mode or Tor-only mode, along with the ability to open private channels, receive keysend payments, bugfixes, and more!
 
 
   - Hybrid mode allows your node to make connections to peers (other nodes) over both Tor and clearnet, enhancing both latency and connection stability. This is enabled by default for new users, while existing users can activate it in Advanced Settings.
+  
   
   - You can now now choose to open private channels, which offer increased privacy but limited routing capabilities compared to public channels.
 developer: Umbrel
